# discord-bot-plugins-src

./: Cargo.toml  LICENSE  README.md  justfile
automod/: Cargo.toml
automod/src/: lib.rs
cats/: Cargo.toml
cats/src/: http.rs  lib.rs
cats/wit/: host.wit  plugin.wit
extension-requests/: Cargo.toml  Makefile
extension-requests/src/: lib.rs
extension-requests/wit/: host.wit  plugin.wit  world.wit
support/: Cargo.toml
support/src/: lib.rs
support/wit/: discord.wit
wit/: core.wit  discord.wit  host.wit  plugin.wit  world.wit
