[package]
name = "automod"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"
twilight-http = { git = "https://github.com/celarye/twilight" }
twilight-model = { git = "https://github.com/celarye/twilight" }
wit-bindgen = "0.51"
wstd = "0.6"

[lib]
crate-type = ["cdylib"]
