[package]
name = "support"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"
twilight-http = { git = "https://github.com/celarye/twilight", default-features = false }
twilight-model = { git = "https://github.com/celarye/twilight" }
url = "2"
wit-bindgen = { version = "0.51", features = ["async"] }
wstd = "0.6.5"

[lib]
crate-type = ["cdylib"]
